style(test-4): :art:  - set a min and max width value for the add button to prevent it to take too much space in large screens.

--- a/forth-test/css/buttons.css
+++ b/forth-test/css/buttons.css
@@ -18,8 +18,8 @@
   color: var(--txt-color-primary);
   font-size: 14px;
   font-weight: 600;
-  margin: 10px auto;
-  width: 60%;
+  margin: 10px;
+  width: clamp(80px, 60%, 210px);
 }
 
 .btn-add:hover {
